--- a/home.html
+++ b/home.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
-<header>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            background-color: black;
-            color: white; /
-        }
-    </style
-    <Title>Home</Title>
-</header>
-<body>Home About Portfolio Contact</h2><div\>    
-    <div>
-    <div>   
-    <h1>Hi I am Bilal Khan</h1><h3> Front End Developer</h3><p>As a web developer,<br>
-    I build dynamic, responsive websites using HTML, CSS, and JavaScript.<br>
-    Skilled in modern frameworks like React and Angular, I focus on creating intuitive user <br>
-    interfaces and optimizing performance. Passionate about leveraging the latest technologies,<br>
-    I deliver user-centered solutions with clean, efficient code.
-    </p><center><img src="Bilal Khan.jpeg" width="250" height="250"></center>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./myprofile.css" rel="stylesheet" />
+    <title>Home</title>
+  </head>
+  <body>
+    <div class="page-container">
+      <nav>
+        <div>LOGO</div>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./portfolio.html"> Portfolio</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
+
+      <div class="main">
+        <h1>Hi I am Bilal Khan</h1>
+        <h3>Front End Developer</h3>
+        <p>
+          As a web developer I build dynamic, responsive websites using HTML,
+          CSS, and JavaScript. Skilled in modern frameworks like React and
+          Angular, I focus on creating intuitive user interfaces and optimizing
+          performance. Passionate about leveraging the latest technologies I
+          deliver user-centered solutions with clean, efficient code.
+        </p>
+        <img src="Bilal Khan.jpeg" width="250" height="250" />
+      </div>
+
+      <div id="buttons">
+        <button>Hire Me</button>
+        <button>Let's Talk</button>
+      </div>
+      <footer id="foot">
+        <img src="github.png" width="25" height="25" />
+        <img src="facebook logo.png" width="25" height="25" />
+        <img src="twitter logo.png" width="25" height="25" />
+      </footer>
     </div>
-    <div
-    <button>Hire Me</button><button>Let's Talk</button>
-    </div>
-    <footer>
-        <img src="github logo.png" width="20" height="20"> <img src="facebook logo.jpg"width="20" height="20"> <img src="twitter logo.webp"20" height="20">
-    </div>
-        
-        
-        </footer>
+  </body>
+</html>
 
