--- a/home.html
+++ b/home.html
@@ -1,52 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com/" />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./myprofile.css" rel="stylesheet" />
-    <title>Home</title>
-  </head>
-  <body>
-    <div class="page-container">
-      <nav>
-        <div>LOGO</div>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="./portfolio.html"> Portfolio</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </nav>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Session</title>
+    <link rel="stylesheet" type="text/css" href="session3.css">
+</head>
+<body>
+    <p style="color: blueviolet;">This is First Session of CSS</p>
+    <h1>This is Heading 1</h1>
+    <h1 style="color: black;"> This is Heading 2 </h1>
+    <h1>This is Heading 3</h1>
+    <p class="paras"> This is paragraph with a class assigned</p>
+    <h1 id="Heading1"> This is a heading with an id assigned</h1> 
+    <p>Hey there</p>
 
-      <div class="main">
-        <h1>Hi I am Bilal Khan</h1>
-        <h3>Front End Developer</h3>
-        <p>
-          As a web developer I build dynamic, responsive websites using HTML,
-          CSS, and JavaScript. Skilled in modern frameworks like React and
-          Angular, I focus on creating intuitive user interfaces and optimizing
-          performance. Passionate about leveraging the latest technologies I
-          deliver user-centered solutions with clean, efficient code.
-        </p>
-        <img src="Bilal Khan.jpeg" width="250" height="250" />
-      </div>
-
-      <div id="buttons">
-        <button>Hire Me</button>
-        <button>Let's Talk</button>
-      </div>
-      <footer id="foot">
-        <img src="github.png" width="25" height="25" />
-        <img src="facebook logo.png" width="25" height="25" />
-        <img src="twitter logo.png" width="25" height="25" />
-      </footer>
+    <div class="container">
+        <a href="https://www.teachmecode.ae">Website Link</a>
+        <h1>website</h1>
+    
     </div>
-  </body>
-</html>
 
+    <div id="gradient1">
+    </div>
+
+</body>
+</html>
