--- a/experience.html
+++ b/experience.html
@@ -5,13 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="experience.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="exp-item">
-    <div class="exp-icon">
-      <div class="circle margin-top"></div>
-      <div class="column"></div>
+    <div class="flex-container">
+            <img src="logo.svg">
+            <div class="navigation"><p>Home</p>
+            <p>About</p>
+            <p>Contact</p>
+            <p>Portfolio</p>
+            </div>
     </div>
+    <div class="my-photo">
+    <img src="freepik-export-202406251033209f3Y 1-Photoroom-photoaidcom-cropped.png" width="217px" height="294px">
+    </div>
+    <div class="exp-heading">About Me</div>
+    <div class="about-para">
+        <p>Hi, I'm Charles Xavier, a dedicated web designer and developer with a deep passion for crafting visually stunning and highly functional websites. My journey in the digital world has equipped me with a keen eye for detail and a strong grasp of both front-end and back-end technologies. Over the years, I've honed my skills in HTML, CSS, JavaScript, and various frameworks, allowing me to create seamless and engaging user experiences.</p>
+         <p>On the back-end, my expertise in languages such as PHP, Python, and database management ensures that every website I build is robust, scalable, and efficient. I thrive on transforming complex problems into elegant solutions and continually strive to push the boundaries of web design and development. Whether working on a small personal project or a large-scale enterprise application, my goal is to deliver exceptional results that exceed expectations.</p>
+    
+    <div class="buttons">
+        <button class="primary-btn">Hire Me</button>
+        <button class="secondary-btn">Let's Talk</button>        
+    </div>
+
+<div class="horizontal-line"><hr width="1157px" color="#03AFED"></div>
+</div>
+
+<div class="exp-body">
+    <div><p class="exp-icon">Experience</p></div>
+      <div class="line-circle"><div class="circle"></div>
+      <div class="column"></div></div>
     <div class="exp-text">
       <p class="exp-role">React Developer</p>
       <p class="exp-company">Teach Me Code Institute (2023-2024)</p>
@@ -25,6 +51,53 @@
         Library to deliver reliable and high-quality applications.
       </p>
     </div>
-  </div>
+    </div>
+
+    <div class="exp-body2">
+    <div class="line-circle-2"><div class="circle-2"></div>
+      <div class="column-2"></div></div>
+    <div class="exp-text-2">
+      <p class="exp-role-2">React Developer</p>
+      <p class="exp-company-2">Teach Me Code Institute (2023-2024)</p>
+      <p class="exp-doc-2">
+        As a React Developer, I’ve crafted dynamic, user-friendly interfaces
+        for various web applications. My work includes building reusable
+        components, managing state with Redux and Context API, and
+        integrating APIs seamlessly. I focus on performance optimization and
+        responsive design to ensure smooth user experiences across devices.
+        My experience also involves testing with Jest and React Testing
+        Library to deliver reliable and high-quality applications.
+      </p>
+    </div>
+    </div>
+    <div>
+    <div class="exp-body3">
+    <div class="line-circle-3"><div class="circle-3"></div>
+      <div class="column-3"></div></div>
+    <div class="exp-text-3">
+      <p class="exp-role-3">React Developer</p>
+      <p class="exp-company-3">Teach Me Code Institute (2023-2024)</p>
+      <p class="exp-doc-3">
+        As a React Developer, I’ve crafted dynamic, user-friendly interfaces
+        for various web applications. My work includes building reusable
+        components, managing state with Redux and Context API, and
+        integrating APIs seamlessly. I focus on performance optimization and
+        responsive design to ensure smooth user experiences across devices.
+        My experience also involves testing with Jest and React Testing
+        Library to deliver reliable and high-quality applications.
+      </p>
+    </div>
+    </div>
+    </div>
+    <div class="horizontal-line"><hr width="1157px" color="#03AFED"></div>
+</div>
 </body>
+<footer>
+    <p class="foot-text">Find me on</p>
+   <div class="images"><img src="Group (1).svg">
+    <img src="Group (2).svg">
+    <img src="Group (3).svg">
+    <img src="Group.svg">
+   </div>
+</footer>
 </html>
