--- a/experience.html
+++ b/experience.html
@@ -18,6 +18,7 @@
             <p>Portfolio</p>
             </div>
     </div>
+    <div class="page-container">
     <div class="my-photo">
     <img src="freepik-export-202406251033209f3Y 1-Photoroom-photoaidcom-cropped.png" width="217px" height="294px">
     </div>
@@ -30,14 +31,16 @@
         <button class="primary-btn">Hire Me</button>
         <button class="secondary-btn">Let's Talk</button>        
     </div>
-
+  <div><p class="exp-icon">Experience</p></div>
 <div class="horizontal-line"><hr width="1157px" color="#03AFED"></div>
 </div>
 
 <div class="exp-body">
-    <div><p class="exp-icon">Experience</p></div>
-      <div class="line-circle"><div class="circle"></div>
-      <div class="column"></div></div>
+
+      <div class="line-circle">
+        <div class="circle"></div>
+      <div class="column"></div>
+    </div>
     <div class="exp-text">
       <p class="exp-role">React Developer</p>
       <p class="exp-company">Teach Me Code Institute (2023-2024)</p>
@@ -52,46 +55,47 @@
       </p>
     </div>
     </div>
-
-    <div class="exp-body2">
-    <div class="line-circle-2"><div class="circle-2"></div>
-      <div class="column-2"></div></div>
-    <div class="exp-text-2">
-      <p class="exp-role-2">React Developer</p>
-      <p class="exp-company-2">Teach Me Code Institute (2023-2024)</p>
-      <p class="exp-doc-2">
-        As a React Developer, I’ve crafted dynamic, user-friendly interfaces
-        for various web applications. My work includes building reusable
-        components, managing state with Redux and Context API, and
-        integrating APIs seamlessly. I focus on performance optimization and
-        responsive design to ensure smooth user experiences across devices.
-        My experience also involves testing with Jest and React Testing
-        Library to deliver reliable and high-quality applications.
-      </p>
-    </div>
-    </div>
-    <div>
-    <div class="exp-body3">
-    <div class="line-circle-3"><div class="circle-3"></div>
-      <div class="column-3"></div></div>
-    <div class="exp-text-3">
-      <p class="exp-role-3">React Developer</p>
-      <p class="exp-company-3">Teach Me Code Institute (2023-2024)</p>
-      <p class="exp-doc-3">
-        As a React Developer, I’ve crafted dynamic, user-friendly interfaces
-        for various web applications. My work includes building reusable
-        components, managing state with Redux and Context API, and
-        integrating APIs seamlessly. I focus on performance optimization and
-        responsive design to ensure smooth user experiences across devices.
-        My experience also involves testing with Jest and React Testing
-        Library to deliver reliable and high-quality applications.
-      </p>
-    </div>
-    </div>
-    </div>
-    <div class="horizontal-line"><hr width="1157px" color="#03AFED"></div>
-</div>
+    <div class="exp-body">
+        <div class="line-circle">
+          <div class="circle"></div>
+        <div class="column"></div>
+      </div>
+      <div class="exp-text">
+        <p class="exp-role">React Developer</p>
+        <p class="exp-company">Teach Me Code Institute (2023-2024)</p>
+        <p class="exp-doc">
+          As a React Developer, I’ve crafted dynamic, user-friendly interfaces
+          for various web applications. My work includes building reusable
+          components, managing state with Redux and Context API, and
+          integrating APIs seamlessly. I focus on performance optimization and
+          responsive design to ensure smooth user experiences across devices.
+          My experience also involves testing with Jest and React Testing
+          Library to deliver reliable and high-quality applications.
+        </p>
+      </div>
+      
+      </div>
+      <div class="exp-body">
+        <div class="line-circle">
+          <div class="circle"></div>
+        <div class="column"></div>
+      </div>
+      <div class="exp-text">
+        <p class="exp-role">React Developer</p>
+        <p class="exp-company">Teach Me Code Institute (2023-2024)</p>
+        <p class="exp-doc">
+          As a React Developer, I’ve crafted dynamic, user-friendly interfaces
+          for various web applications. My work includes building reusable
+          components, managing state with Redux and Context API, and
+          integrating APIs seamlessly. I focus on performance optimization and
+          responsive design to ensure smooth user experiences across devices.
+          My experience also involves testing with Jest and React Testing
+          Library to deliver reliable and high-quality applications.
+        </p>
+      </div>
+</div>  <div class="horizontal-line"><hr width="1157px" color="#03AFED"></div>
 </body>
+</div>
 <footer>
     <p class="foot-text">Find me on</p>
    <div class="images"><img src="Group (1).svg">
