--- a/myprofile.html
+++ b/myprofile.html
@@ -43,7 +43,7 @@
         <img src="Bilal Khan.jpeg" width="250" height="250"/>
       </div></br>
       </div>
-      <div class="button">
+      <div class="buttons">
         <button class="primarybtn">Hire Me</button>
         <button class="secondarybtn">Let's Talk</button>
       </div>
